--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "oauthsimple": "0.0.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-navigation": "^1.1.46"
